[package]
name = "gcp_service_oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json"] }
