[package]
name = "gcp_service_oauth2"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust implementation of service account authentication via OAuth 2.0 for Google Cloud Platform"
repository = "https://github.com/nerandell/gcp_service_oauth2"
readme = "README.md"
keywords = ["google", "gcp", "service_account", "authentication", "oauth"]
categories = ["authentication"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json"] }
